src/test/ui/issues/issue-35570.stderr
error: compilation successful
  --> $DIR/issue-35570.rs:28:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     takes_lifetime(foo);
LL | | }
   | |_^

error: aborting due to previous error

